apps/frontend/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: store-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: akarv/online-store-frontend:cc44c5df47ac9546afb1532d37b5317d29c9c90e
        ports:
        - containerPort: 80
      resources:
        requests:
          cpu: "50m"
          memory: "64Mi"
        limits:
          cpu: "200m"
          memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: store-frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
