apps/frontend/base/shop-fronted-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: store-frontend
spec:
  parentRefs:
  - name: external-gateway
    namespace: nginx-gateway
  hostnames:
  - "shop.jenkinsdevops.org"
  rules:
  - matches:
    - path: { type: PathPrefix, value: / }
    backendRefs:
    - name: frontend
      port: 80
